/*
Copyright 2022 The efucloud.com Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.efucloud.api.develop.v1alpha1;

import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/efucloud/api/develop/v1alpha1";

// CoderTemplate is the Schema for the CoderTemplates API
message CoderTemplate {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional CoderTemplateSpec spec = 2;

  optional CoderTemplateStatus status = 3;
}

// CoderTemplateList contains a list of CoderTemplate
message CoderTemplateList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated CoderTemplate items = 2;
}

// CoderTemplateSpec defines the desired state of CoderTemplate
message CoderTemplateSpec {
  // template name
  optional string name = 1;

  // template description
  optional string description = 2;

  // template' image author
  optional string author = 3;

  // template language
  // +kubebuilder:validation:Enum=golang;java;python;ruby;rust
  optional string language = 4;

  // template containers
  repeated k8s.io.api.core.v1.Container containers = 5;
}

// CoderTemplateStatus defines the observed state of CoderTemplate
message CoderTemplateStatus {
}

// CoderVirt is the Schema for the CoderVirts API
message CoderVirt {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional CoderVirtSpec spec = 2;

  optional CoderVirtStatus status = 3;
}

// CoderVirtList contains a list of CoderVirt
message CoderVirtList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated CoderVirt items = 2;
}

// CoderVirtSpec defines the desired state of CoderVirt
message CoderVirtSpec {
  optional bool running = 1;

  // +kubebuilder:validation:Enum=golang;java;python;ruby;rust
  optional string language = 2;

  optional string templateRef = 3;
}

// CoderVirtStatus defines the observed state of CoderVirt
message CoderVirtStatus {
}

